--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="icon/music.png">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="icon" href="./icon/music.png">
 </head>
 <body>
     
@@ -36,7 +36,7 @@
 <div class="playlist">
 
 </div>
-<script src="index.js"></script>
+<script src="./index.js"></script>
     
 </body>
 </html>
